Fixed mobility auto zooming on Safari browser

--- a/src/components/Search/searchComponent.css
+++ b/src/components/Search/searchComponent.css
@@ -43,8 +43,6 @@
     padding-left: 23px;
     border: none;
     font-size: 1rem;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
   }
 
   button {
@@ -366,8 +364,6 @@
     height: 25px;
     width: 80%;
     font-size: .8rem;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
     }
   }
 
