--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,5 @@ a {
   a {    
     padding: 5px 5px;
     font-size: 0.6rem;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
   }
 }
